<resources>
    <string name="app_name">Diabetex</string>
    <string name="register">Deiabetex\'e Üye Değilim</string>
    <string name="dialog_no_internet">İnternet bağlantınızı kontrol edip tekrar deneyiniz.</string>
    <string name="dialog_ok">TAMAM</string>
    <string name="title_activity_main">PROGRAMLARIM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="program_start_date_text">Başlangıç:</string>
    <string name="program_finish_date_text">Bitiş:</string>
    <string name="program_duration_text">Ortalama:</string>
    <string name="program_go_button">BAŞLA</string>
    <string name="program_arranger_text">Düzenleyen:</string>
    <string name="title_activity_exercises">EGZERSİZLERİM</string>
    <string name="exercise_completed_button">EGZERSİZ SEÇ</string>
    <string name="exercise_tab1_header">TAMAMLANMAMIŞ</string>
    <string name="exercise_tab2_header">TAMAMLANMIŞ</string>

    <string name="title_activity_exercise_detail">ExerciseDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="custom_dialog_diabetes_hint">Şeker Değeri</string>
    <string name="custom_dialog_diastole_hint">Küçük Tansiyon</string>
    <string name="custom_dialog_systole_hint">Büyük Tansiyon</string>
    <string name="custom_dialog_pulse_hint">Nabız</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_exercise_details">ExerciseDetailsActivity</string>
    <string name="exDetailsSetHeader">Set</string>
    <string name="exDetailsRepHeader">Tekrar</string>
    <string name="exDetailsRestHeader">Dinlenme</string>
    <string name="exDetailsDailyRepHeader">Günlük</string>
    <string name="exDetailsWeeklyRepHeader">Haftalık</string>
    <string name="exDetailsExpHeader">Açıklama</string>
    <string name="dummy_text">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="saved_user_isloggedin_key">SavedUserIsLoggedIn</string>
    <string name="logging_out_key">LoggingOutUser</string>
    <string name="saved_user_uid_key">SavedUserUid</string>
    <string name="saved_user_email_key">SavedUserEmail</string>
    <string name="saved_user_name_key">SavedUserName</string>
    <string name="saved_user_surname_key">SavedUserSurname</string>
    <string name="saved_user_all_videos_downloaded_key">AllVideosDownloaded</string>
    <string name="saved_user_needstologinagain_key">SavedUserNeedsToLoginAgain</string>
    <string name="saved_user_file_key">SavedUserFile</string>

    <string name="permanentNotificationChannelId">DiabetexPermanentNotificationChannelId</string>
    <string name="permanentNotificationChannelName">DiabetexPermanentNotificationChannelName</string>

    <string name="minimumSpeedIntentKey">minimumSpeedIntentKey</string>
    <string name="maximumSpeedIntentKey">maximumSpeedIntentKey</string>

    <!--
    External Links
   !-->
    <string name="terms_user_link">http://diabetexercise.com/term_service.html</string>

    <!--
    Alert dialog messages and titles
    !-->
    <string name="spentTimeForExerciseSoLowMessage">Egzersiz için harcanan süre uzmanlarımızın bu egzersizi bitirmek için tanımladığı minimum sürenin altında. Lütfen egzersizi istenilen tekrarda tamamladığınızdan emin olup tekrar deneyiniz.</string>
    <string name="spentTimeForExerciseSoLowTitle">Süre Çok Kısa</string>
    <string name="spentTimeForExerciseSoLowBtnText">Egzersize Devam Et</string>

    <!--
    Exercise Details Activity Titles
    !-->
    <string name="exerciseDetailsActivityMinWalkingSpeedTitle">Minimum Hız</string>
    <string name="exerciseDetailsActivityMaxWalkingSpeedTitle">Maksimum Hız</string>
    <string name="exerciseDetailsStartExerciseTitle">YÜRÜYÜŞE BAŞLA</string>
    <string name="exerciseDetailsStopExerciseTitle">YÜRÜYÜŞÜ BİTİR</string>
    <!--
    Exercise Details Alert dialog messages and titles
    !-->
    <string name="userCouldCloseScreenMessage">Yürüyüş yaparken ekranı kapatabilirsiniz. \nHızınızı bildirimler ile kontrol edip ayarlayabilirsiniz. \n\nSarı: Hızlan \n\nYeşil: Olduğun Hızda Devam Et \n\nKırmızı: Yavaşla</string>
    <string name="userCouldCloseScreenTitle">Hatırlatma</string>
    <string name="userCouldCloseScreenButtonTitle">Yürüyüşe Başla</string>
</resources>
