<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diabet.muhendis.diabetex.ExerciseDetailsActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/exDetailsImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        >
        <ImageView
            android:id="@+id/exDetailsImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            />
        <ImageView
            android:id="@+id/exDetailsTransperentLayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            />

        <ImageView
            android:id="@+id/exDetailsVideoPlayImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_play_circle_outline_black_72dp"
            />
    </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/exDetailsImages">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/exDetailsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                android:textSize="@dimen/exercise_details_header_size"
                android:gravity="center"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="EGZERSİZ BAŞLIĞI"
                android:paddingVertical="@dimen/exercise_details_header_margin"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exDetailsSetHeader"
                        android:textSize="@dimen/exercise_details_info_header_size"
                        android:gravity="center"
                        android:textColor="@color/greyDarker"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:fontFamily="@font/roboto"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/exerciseSets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/exercise_details_info_size"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:fontFamily="@font/roboto_condensed_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exDetailsRepHeader"
                        android:textSize="@dimen/exercise_details_info_header_size"
                        android:gravity="center"
                        android:textColor="@color/greyDarker"

                        style="@style/TextAppearance.AppCompat.Body1"
                        android:fontFamily="@font/roboto"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/exerciseRep"
                        android:gravity="center"
                        android:textSize="@dimen/exercise_details_info_size"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:fontFamily="@font/roboto_condensed_bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exDetailsRestHeader"
                        android:textSize="@dimen/exercise_details_info_header_size"
                        android:gravity="center"
                        android:textColor="@color/greyDarker"

                        style="@style/TextAppearance.AppCompat.Body1"
                        android:fontFamily="@font/roboto"/>
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/exerciseRest"
                        android:gravity="center"
                        android:textSize="@dimen/exercise_details_info_size"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:fontFamily="@font/roboto_condensed_bold"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exDetailsDailyRepHeader"
                        android:textSize="@dimen/exercise_details_info_header_size"
                        android:gravity="center"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/greyDarker"
                        android:fontFamily="@font/roboto"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <ProgressBar
                            android:id="@+id/exDetailsDailyRepProgressBar"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/circular_progress_bar"
                            android:background="@drawable/circular_shape"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:max="100"
                            android:progress="100"
                            android:layout_gravity="center"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/exerciseDailyRep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:textSize="@dimen/exercise_details_info_size"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1">
                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exDetailsWeeklyRepHeader"
                        android:textSize="@dimen/exercise_details_info_header_size"
                        android:gravity="center"
                        android:textColor="@color/greyDarker"

                        style="@style/TextAppearance.AppCompat.Body1"
                        android:fontFamily="@font/roboto"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ProgressBar
                            android:id="@+id/exDetailsWeeklyRepProgressBar"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/circular_progress_bar"
                            android:background="@drawable/circular_shape"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:max="100"
                            android:progress="100"
                            android:layout_gravity="center"/>
                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/exerciseWeeklyRep"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:textSize="@dimen/exercise_details_info_size"
                            style="@style/TextAppearance.AppCompat.Body1"
                            />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/exDetailsExpHeader"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/greyDarker"
                    android:layout_marginBottom="8dp"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="@dimen/exercise_details_info_header_size"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/exDetailsExpEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/open_sans"
                    android:inputType="textMultiLine"
                    android:paddingHorizontal="10dp"
                    android:textColor="@color/greyDarkUp"
                    android:textSize="16dp" />


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/exDetailsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toolbar_translucent"/>

    <Button
        android:id="@+id/exerciseDoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="EGZERSİZİ BİTİR"
        android:textColor="@color/white"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundedbutton2"
        style="@style/TextAppearance.AppCompat.Body2"
        android:fontFamily="@font/roboto_condensed_bold"
        android:textSize="20dp"/>

</RelativeLayout>
