<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        android:minHeight="100dp"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/card_corner_radius">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/program_card_padding">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/program_card_padding">

                    <TextView
                        android:id="@+id/programHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Başlık"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="@dimen/program_header_size" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_height"
                    android:background="@color/grey"></View>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/program_card_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/program_date_margin">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_date_range_black_48dp_opacity80" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginHorizontal="@dimen/program_date_box_margin">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/program_start_date_text"
                                android:textSize="@dimen/program_date_box_text_size"
                                style="@style/Base.TextAppearance.AppCompat.Medium"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/program_finish_date_text"
                                android:textSize="@dimen/program_date_box_text_size"
                                style="@style/Base.TextAppearance.AppCompat.Medium"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/programStartDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/program_date_box_text_size"
                                />

                            <TextView
                                android:id="@+id/programFinishDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/program_date_box_text_size"
                                />
                        </LinearLayout>

                    </LinearLayout>
                    <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/program_duration_margin">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_timer_black_48dp_opacity80" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/program_duration_text"
                            android:textSize="@dimen/program_date_box_text_size"
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_marginHorizontal="@dimen/program_duration_margin"/>


                        <TextView
                            android:id="@+id/programDuration"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/program_date_box_text_size" />
                    </LinearLayout>-->
                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/checked"
                        android:layout_gravity="center_horizontal"/>
                    <Button
                        style="@android:style/Widget.DeviceDefault.Button.Borderless"
                        android:id="@+id/startButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/program_complete_margin"
                        android:text="@string/program_go_button"
                        android:textSize="@dimen/program_date_box_text_size"
                        android:textColor="@color/colorPrimary"
                        />
                </LinearLayout>-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:id="@+id/programDoneImage"
                        android:visibility="gone"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/checked"
                        android:layout_centerVertical="true"
                        />
                    <Button
                        style="@android:style/Widget.DeviceDefault.Button.Borderless"
                        android:id="@+id/startButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/program_complete_margin"
                        android:text="@string/program_go_button"
                        android:textSize="@dimen/program_date_box_text_size"
                        android:textColor="@color/colorPrimary"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>